# haskell-learning

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  haskell-learning.cabal  shell.nix
app/: Main.hs  ServerMain.hs
