cabal-version:      3.0
name:               haskell-learning
version:            0.1.0.0
homepage:           badhaskell.me
license:            MIT
license-file:       LICENSE
author:             Clojure Gang
maintainer:         clojure@badhaskell.me
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-learning
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.2.0
                    , time
                    , prelude-compat
                    , aeson
                    , servant-server

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021
